Refactor Url parser + Handler
Signed-off-by: tvallin <thibault.vallin@oracle.com>